Fix broken stylesheets

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -36,7 +36,6 @@ canvas {
 
     /* Windows 98 styling */
     background-color: #c0c0c0;
-    border: 2px outset #c0c0c0;
     font-family: "MS Sans Serif", sans-serif;
     font-size: 11px;
 
@@ -61,10 +60,11 @@ canvas {
     align-items: center;
     background: linear-gradient(90deg, #0000ff 0%, #8080ff 100%) !important;
     color: white !important;
-    padding: 3px;
+    padding: 0px 3px;
+    margin: 3px;
     height: 24px;
     min-height: 24px;
-    border-bottom: 1px #eee solid;
+    border-bottom: 1px #c0c0c0 solid;
 }
 
 .title-bar h4 {
